--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/style/style.css" />
+  <link rel="stylesheet" href="style/style.css" />
   <title>Form Validator</title>
 </head>
 
@@ -37,7 +37,7 @@
     </form>
   </div>
 
-  <script src="/script/script.js"></script>
+  <script src="script/script.js"></script>
 </body>
 
 </html>
